add Kennedy's destinations

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#florida {
+    background-color: chocolate;
+}
+
+#abuja {
+    background-color: #851f77;
+}
+
+#onitsha {
+    background-color: #5fe675fd;
+}
